--- a/biopage.html
+++ b/biopage.html
@@ -13,14 +13,13 @@
         }
         .profile img {
             margin-right: 20px;
-            
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="profile">
-            <img src="quick maths.jpg" alt="Student Picture" height="100" width="100">
+            <img src="studentpic.jpg" alt="Student Picture" height="100" width="100">
             <div>
                 <h1>Brent Torres</h1>
                 <p>Student at DLSU 🏹</p>
